# SlamKernel

./: .clang-format  CMakeLists.txt  README.md  build.sh  recompile.sh
interface/: SlamKernel.cpp  SlamKernel.h
slam/: CMakeLists.txt
slam/include/camera_models/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
slam/include/core/: System.h
slam/include/feature/: ORBVocabulary.h  ORBextractor.h  ORBmatcher.h
slam/include/frame/: Frame.h  KeyFrame.h  KeyFrameDatabase.h
slam/include/map/: Atlas.h  Map.h  MapPoint.h
slam/include/solver/: G2oTypes.h  MLPnPsolver.h  OptimizableTypes.h  Optimizer.h  Sim3Solver.h  TwoViewReconstruction.h
slam/include/threads/: LocalMapping.h  LoopClosing.h  Tracking.h
slam/include/utils/: Config.h  Converter.h  GeometricTools.h  ImuTypes.h  Settings.h
slam/src/camera_models/: KannalaBrandt8.cpp  Pinhole.cpp
slam/src/core/: System.cpp
slam/src/feature/: ORBextractor.cpp  ORBmatcher.cpp
slam/src/frame/: Frame.cpp  KeyFrame.cpp  KeyFrameDatabase.cpp
slam/src/map/: Atlas.cpp  Map.cpp  MapPoint.cpp
slam/src/solver/: G2oTypes.cpp  MLPnPsolver.cpp  OptimizableTypes.cpp  Optimizer.cpp  Sim3Solver.cpp  TwoViewReconstruction.cpp
slam/src/threads/: LocalMapping.cpp  LoopClosing.cpp  Tracking.cpp
slam/src/utils/: Config.cpp  Converter.cpp  GeometricTools.cpp  ImuTypes.cpp  Settings.cpp
